[package]
name = "iamoriginalsid"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
lazy_static = "1.5.0"
log = "0.4.22"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
serenity = "0.12.2"
simple_logger = "5.0.0"
tokio = { version = "1.38.0", features = ["full"] }
