[package]
name = "iamoriginalsid"
version = "0.1.0"
edition = "2021"

[dependencies]
poise = "0.6.1"
dotenv = "0.15.0"
env_logger = "0.11.3"
lazy_static = "1.5.0"
log = "0.4.22"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
serenity = "0.12.2"
tokio = { version = "1.38.0", features = ["full"] }
